--- a/style.css
+++ b/style.css
@@ -11,3 +11,20 @@
 .container-fluid {
     padding: 60px 50px;
 }
+
+.logo-small {
+    color: #f4511e;
+    font-size: 50px;
+}
+
+.logo {
+    color: #f4511e;
+    font-size: 200px;
+}
+
+  @media screen and (max-width: 768px) {
+    .col-sm-4 {
+      text-align: center;
+      margin: 25px 0;
+    }
+}
