--- a/style.css
+++ b/style.css
@@ -136,3 +136,9 @@
     border-color: transparent;
     color: #fff !important;
 }
+
+footer .glyphicon {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #f4511e;
+}
