--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     background-color: #f4511e;
     color: #fff;
     padding: 100px 25px;
+    font-family: Montserrat, sans-serif;
 }
 
 .bg-grey {
@@ -121,6 +122,7 @@
     line-height: 1.42857143 !important;
     letter-spacing: 4px;
     border-radius: 0;
+    font-family: Montserrat, sans-serif;
 }
   
 .navbar li a, .navbar .navbar-brand {
@@ -141,4 +143,26 @@ footer .glyphicon {
     font-size: 20px;
     margin-bottom: 20px;
     color: #f4511e;
+}
+
+body {
+    font: 400 15px Lato, sans-serif;
+    line-height: 1.8;
+    color: #818181;
+}
+
+h2 {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #303030;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+  
+h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    color: #303030;
+    font-weight: 400;
+    margin-bottom: 30px;
 }
